--- a/Teleasis-website/Views/Pacient/VizualizareAlarmeSupraveghetor.cshtml
+++ b/Teleasis-website/Views/Pacient/VizualizareAlarmeSupraveghetor.cshtml
@@ -95,7 +95,7 @@
                                 {
                                     <label>Observații: </label>
                                     <br />
-                                    <textarea name="observatii"></textarea>
+                                    <textarea name="observatii" id="observatii_alarma"></textarea>
                                       <div class="modal-footer">
                                         <input class="form-control" type="text" hidden name="id_uri" id="id_uri"/>
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anulare</button>
