--- a/Teleasis-website/Views/Acasa/_AdaugareIngrijitor.cshtml
+++ b/Teleasis-website/Views/Acasa/_AdaugareIngrijitor.cshtml
@@ -1,17 +1,24 @@
 ﻿@model Teleasis_website.Models.IngrijitorModel
+@{
+    var str = @"[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$";
+}
 <div class="mb-3">
     <label for="recipient-name" class="col-form-label">Nume:</label>
-    <input type="text" class="form-control" id="input-nume-ingrijitor" name="nume_ingrijitor"/>
+    <input type="text" class="form-control" id="input-nume-ingrijitor" name="nume_ingrijitor" onfocusout='validareText(event, "text")'/>
+    <span id="eroare-input-nume-ingrijitor" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label for="message-text" class="col-form-label">Prenume:</label>
-    <input type="text" class="form-control" id="input-prenume-ingrijitor" name="prenume_ingrijitor"/>
+    <input type="text" class="form-control" id="input-prenume-ingrijitor" name="prenume_ingrijitor" onfocusout='validareText(event, "text")'/>
+    <span id="eroare-input-prenume-ingrijitor" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label for="message-text" class="col-form-label">Email:</label>
-    <input type="email" class="form-control" id="input-email-ingrijitor" name="email_ingrijitor"/>
+    <input type="email" class="form-control" id="input-email-ingrijitor" rgx=@str name="email_ingrijitor" onfocusout='validareText(event, "email")'/>
+    <span id="eroare-input-email-ingrijitor" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label for="message-text" class="col-form-label">Parola:</label>
-    <input class="form-control" type="password" id="input-parola-ingrijitor" name="parola_ingrijitor"/>
+    <input class="form-control" type="password" id="input-parola-ingrijitor" name="parola_ingrijitor" onfocusout='validareText(event, "parola")'/>
+    <span id="eroare-input-parola-ingrijitor" class="text-danger"></span>
 </div>
