--- a/Teleasis-website/Views/Autentificare/Autentificare.cshtml
+++ b/Teleasis-website/Views/Autentificare/Autentificare.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Pagina Autentificare";
 }
+@{
+    var str = @"[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$";
+}
 
 <section class="vh-100 container-section" style="background-color: #9A616D;">
   <div class="container py-5 h-100">
@@ -26,20 +29,24 @@
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form2Example17">Email</label>
-                    <input type="email" id="form2Example17" class="form-control form-control-lg" name="email"/>
+                    <input type="email" rgx=@str id="input-email" class="form-control form-control-lg" name="email" onfocusout='validareText(event, "email")'/>
+                    <span id="eroare-input-email" class="text-danger"></span>
+
                   </div>
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form2Example27">Parolă</label>
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" name="password"/>
+                    <input type="password" id="input-parola" class="form-control form-control-lg" name="password" onfocusout='validareText(event)'/>
+                    <span id="eroare-input-parola" class="text-danger"></span>
+
                   </div>
 
                   <div class="pt-1 mb-4">
                     <button class="btn btn-lg btn-block button-login" type="submit" >Autentificare</button>
                   </div>
 
-                  <a class="small text-muted" href="#!">Ați uitat parola?</a>
-                  <p class="eroare text-danger">@ViewBag.Eroare</p>
+                    @*<a class="small text-muted" href="#!">Ați uitat parola?</a>*@
+                    <p class="eroare text-danger">@ViewBag.Eroare</p>
                 </form>
 
               </div>
@@ -50,3 +57,27 @@
     </div>
   </div>
 </section>
+
+<script>
+
+
+    function validareText(event, tip) {
+        var element = document.getElementById(event.target.id);
+        element.style.borderColor = "#3f7bff";
+        document.getElementById("eroare-" + event.target.id).innerText = ""
+
+         if(event.target.value == ""){
+            element.style.borderColor = "#c53629";
+            document.getElementById("eroare-" + event.target.id).innerText = "Câmp obligatoriu!"
+        }
+        else if(tip == "email")
+        {
+            var reg = new RegExp(element.getAttribute("rgx"));
+            if(!(reg.test(element.value))){
+                element.style.borderColor = "#c53629";
+                document.getElementById("eroare-" + event.target.id).innerText = "Email invalid!";
+            }
+        }    
+    
+    }
+</script>
