--- a/Teleasis-website/wwwroot/css/site.css
+++ b/Teleasis-website/wwwroot/css/site.css
@@ -410,4 +410,9 @@ fieldset {
     margin: 0 auto;
 }
 
+#observatii_alarma {
+    width:100%;
+    margin-top: 20px;
+}
+
 /*-------END ALARME--------------------------------*/
