--- a/Teleasis-website/Views/Pacient/FisaPacient.cshtml
+++ b/Teleasis-website/Views/Pacient/FisaPacient.cshtml
@@ -182,7 +182,7 @@
     <div class="formular">
         <fieldset>
             <div class="row">
-                    <legend class="col-11">Istoric Medical:</legend>
+                    <legend class="col-11">Consultații:</legend>
                     <div class="col-1 col-md-1 col-sm-1 col-lg-1">
                         <a role="button" data-bs-toggle="modal"  data-bs-target="#AdaugaConsultatieModal" class="btn btn-adauga-verde btn-circle "><i class="fa-solid fa-plus"></i></a>
                     </div>  
@@ -205,7 +205,7 @@
                                 <td>@(consultatie.data_consultatie)</td>
                                 <td>@(consultatie.diagnostic_consultatie)</td>
                                 <td class="text-end">
-                                    <a role="button" id="accesare_consultatie" class="btn  btn-circle" data-toggle="tooltip" data-bs-toggle="modal" onclick=sendIdConsultatie("@(consultatie.id_consultatie)#@(consultatie.motiv_prezentare_consultatie)#@(consultatie.data_consultatie)#@(consultatie.simptome_consultatie)#@(consultatie.diagnostic_consultatie)#@(consultatie.trimitere_consultatie)#@(consultatie.retete_generate_consultatie)") data-bs-target="#AccesareConsultatieModal" data-placement="bottom" title="Accesare Consultatie"><i class="fa-solid fa-eye"></i></a>
+                                    <a role="button" id="accesare_consultatie" class="btn  btn-circle" data-toggle="tooltip" data-bs-toggle="modal" onclick=sendIdConsultatie("@(consultatie.id_consultatie)#@(consultatie.motiv_prezentare_consultatie)#@(consultatie.data_consultatie)#@(consultatie.simptome_consultatie)#@(consultatie.diagnostic_consultatie)#@(consultatie.trimitere_consultatie)#@(consultatie.retete_generate_consultatie)#@(consultatie.tratament_consultatie)#@(consultatie.schema_consultatie)") data-bs-target="#AccesareConsultatieModal" data-placement="bottom" title="Accesare Consultatie"><i class="fa-solid fa-eye"></i></a>
                                     <a role="button" id="arhivare_consultatie" class="btn  btn-circle" data-bs-toggle="modal" onclick=sendId("@(consultatie.id_consultatie)#@(ViewBag.pacient.id_pacient)")  data-bs-target="#deleteModal" data-bs-id="@(consultatie.id_consultatie)" data-toggle="tooltip" data-placement="bottom" title="Arhivare Consultatie"><i class="fa-solid fa-box-archive"></i></a>
 
                                    
@@ -219,6 +219,74 @@
               </div>
             </div>
     </fieldset>
+    <br />
+    <fieldset>
+            <div class="row">
+                    <legend class="col-11">Alergii:</legend>
+                    <div class="col-1 col-md-1 col-sm-1 col-lg-1">
+                        <a role="button" data-bs-toggle="modal"  data-bs-target="#AdaugaAlergieModal" class="btn btn-adauga-verde btn-circle "><i class="fa-solid fa-plus"></i></a>
+                    </div>  
+                </div>
+            <div class="tab-content">
+              <div id="alergii">
+                <table class="table table-striped" id="tabel-alergii">
+                    <thead>
+                        <tr>
+                            <th>Alergie</th>
+                            <th>Observatii</th> 
+                            <th>Tip</th>
+                            <th></th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                       @foreach(var alergie in ViewBag.listaAlergii)
+                            {
+                                <tr>
+                                <td>@(alergie.alergie)</td>
+                                <td>@(alergie.observatii)</td>
+                                <td>@(alergie.tip)</td>
+                                <td class="text-end">
+                                    <a role="button" id="stergere_alergie" class="btn  btn-circle" data-bs-toggle="modal" onclick=sendIdAlergie("@(alergie.id_alergie)#@(ViewBag.pacient.id_pacient)")  data-bs-target="#deleteModalAlergie" data-bs-id="@(alergie.id_alergie)" data-toggle="tooltip" data-placement="bottom" title="Ștergere Alergie"><i class="fas fa-trash"></i></a>
+
+                                   
+                           </td>
+                                </tr>
+
+                            }                   
+                
+                    </tbody>
+                </table>
+              </div>
+            </div>
+    </fieldset>
+
+
+
+
+    <div class="modal fade " id="deleteModalAlergie" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Ștergere alergie</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">   
+                        @using (Html.BeginForm("StergereAlergie", "Pacient", new{id=""}, FormMethod.Post, true, new{id = "formStergere_alergie"}))
+                                {
+                            <p>Sunteți sigur că doriți să ștergeți această alergie?</p>
+                                  <div class="modal-footer">
+                                    <input class="form-control" type="text" hidden name="id_uriAlergie" id="id_uriAlergie"/>
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Nu</button>
+                                    <button class="btn btn-primary" type="submit" id="buttonDaPacient">Da</button>
+                                  </div>
+                        }
+                        
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <div class="modal fade " id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -245,7 +313,35 @@
         </div>
 
 
-    <div class="modal fade " id="AdaugaConsultatieModal" tabindex="-1" aria-labelledby="AdaugaConsultatieModal" aria-hidden="true">
+    <div class="modal fade " id="AdaugaAlergieModal" tabindex="-1" aria-labelledby="AdaugaAlergieModal" aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title text-center" id="exampleModalLabel">Creare alergie</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+          
+              @using (Html.BeginForm("AdaugareAlergie", "Pacient", new{id_pacient=@ViewBag.pacient.id_pacient}, FormMethod.Post, true, new{id = "formAdaugareAlergie"}))
+                 {
+
+                  <div id="adaugare-medic">
+                       <partial name="_AdaugareAlergie" /> 
+                  </div>
+
+             
+                   <div class="modal-footer">
+                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
+                    <button class="btn btn-primary" type="submit">Adaugă</button>
+                    </div>
+                    }
+     </div>
+        </div>
+      </div>
+</div>
+
+
+<div class="modal fade " id="AdaugaConsultatieModal" tabindex="-1" aria-labelledby="AdaugaConsultatieModal" aria-hidden="true">
       <div class="modal-dialog modal-xl">
         <div class="modal-content">
           <div class="modal-header">
@@ -295,6 +391,14 @@
                         <div class="mb-3">
                             <label class="col-form-label">Diagnostic:</label>
                             <textarea type="text" disabled class="form-control" id="input-diagnostic1" name="diagnostic_consultatie"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label class="col-form-label">Tratament:</label>
+                            <textarea type="text" disabled class="form-control" id="input-tratament1" name="tratament_consultatie"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label class="col-form-label">Schema de medicatie:</label>
+                            <textarea type="text" disabled class="form-control" id="input-schema1" name="schema_consultatie"></textarea>
                         </div>
                         <div class="mb-3">
                             <label  class="col-form-label">Trimiteri:</label>
@@ -445,6 +549,8 @@
     }
 
 
+
+
     function validareText(event, tip) {
         var element = document.getElementById(event.target.id);
         element.style.borderColor = "#3f7bff";
@@ -499,7 +605,11 @@
         document.getElementById("input-sex-pacient").disabled = true;
         document.getElementById("input-nastere-pacient").disabled = true;
     }
-
+    function sendIdAlergie(id){
+        document.getElementById("formStergere_alergie").setAttribute("id_alergie", id);
+        document.getElementById("formStergere_alergie").setAttribute("action", "StergereAlergie" + "/" + id);
+        document.getElementById("id_uriAlergie").value = id;
+    }
 
     function sendId(id){
         document.getElementById("formArhivare_consultatie").setAttribute("id_consultatie", id);
@@ -517,6 +627,8 @@
         document.getElementById("input-diagnostic1").innerText = date[4];
         document.getElementById("input-trimitere1").innerText = date[5];
         document.getElementById("input-retete-generate1").innerText = date[6];
+        document.getElementById("input-tratament1").innerText = date[7];
+        document.getElementById("input-schema1").innerText = date[8];
     }
 
 </script>
