--- a/Teleasis-website/Views/Pacient/_AdaugareConsultatie.cshtml
+++ b/Teleasis-website/Views/Pacient/_AdaugareConsultatie.cshtml
@@ -16,6 +16,16 @@
     <span id="eroare-input-diagnostic" class="text-danger"></span>
 </div>
 <div class="mb-3">
+    <label class="col-form-label">Tratament:</label>
+    <textarea type="text" class="form-control" id="input-tratament" name="tratament_consultatie" onfocusout='validareText(event)'></textarea>
+    <span id="eroare-input-tratament" class="text-danger"></span>
+</div>
+<div class="mb-3">
+    <label class="col-form-label">Schema de medicatie:</label>
+    <textarea type="text" class="form-control" id="input-schema" name="schema_consultatie" onfocusout='validareText(event)'></textarea>
+    <span id="eroare-input-schema" class="text-danger"></span>
+</div>
+<div class="mb-3">
     <label  class="col-form-label">Trimiteri:</label>
     <textarea type="text" class="form-control" id="input-trimitere" name="trimitere_consultatie"></textarea>
 </div>
