ICD-9 + incepere retete

--- a/Teleasis-website/Views/Pacient/FisaPacient.cshtml
+++ b/Teleasis-website/Views/Pacient/FisaPacient.cshtml
@@ -452,6 +452,11 @@
 
 </div>
 
+<script>
+    $(".diagnostice").chosen();
+    $(".substante").chosen();
+
+</script>
 
 <script>
 
@@ -630,5 +635,6 @@
         document.getElementById("input-tratament1").innerText = date[7];
         document.getElementById("input-schema1").innerText = date[8];
     }
+
 
 </script>
