--- a/Teleasis-website/Views/Pacient/FisaPacient.cshtml
+++ b/Teleasis-website/Views/Pacient/FisaPacient.cshtml
@@ -200,6 +200,50 @@
          </div>
       </fieldset>
       <br />
+       <fieldset>
+         <div class="row">
+            <legend class="col-11">Trimiteri:</legend>
+            <div class="col-1 col-md-1 col-sm-1 col-lg-1">
+               <a role="button" data-bs-toggle="modal"  data-bs-target="#AdaugaTrimitereModal" class="btn btn-adauga-verde btn-circle "><i class="fa-solid fa-plus"></i></a>
+            </div>
+         </div>
+         <div class="tab-content">
+            <div id="trimiteri">
+               <table class="table table-striped" id="tabel-trimiteri">
+                  <thead>
+                     <tr>
+                        <th>Tip</th>
+                        <th>Observatii</th>
+                        <th></th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     @foreach(var trimitere in ViewBag.listaTrimiteri)
+                     {
+                     <tr>
+                        <td>@(trimitere.tip)</td>
+                        <td>@(trimitere.observatii)</td>
+                        <td class="text-end">
+                           <a role="button" id="stergere_trimitere" class="btn  btn-circle" data-bs-toggle="modal" onclick=sendIdTrimitere("@(trimitere.id_trimitere)#@(ViewBag.pacient.id_pacient)")  data-bs-target="#deleteModalTrimitere" data-bs-id="@(trimitere.id_trimitere)" data-toggle="tooltip" data-placement="bottom" title="Ștergere Trimitere"><i class="fas fa-trash"></i></a>
+                            @if(trimitere.trimis == false)
+                            {         
+                                <a role="button" id="send_trimitere" class="btn  btn-circle" onclick="location.href='@Url.Action("SendTrimitere","Pacient",new { id_trimitere = @trimitere.id_trimitere, id_pacient = @ViewBag.pacient.id_pacient })'"  data-toggle="tooltip" data-placement="bottom" title="Trimitere la HL-7 Trimitere"><i class="fa-solid fa-share"></i></a>
+                            }
+                            else
+                            {
+                                <a role="button" id="afisare_trimitere" class="btn  btn-circle"  data-bs-toggle="modal" onclick=sendIdTrimitereAfisare("@(trimitere.id_trimitere)")  data-bs-target="#afisareModalTrimitere" data-bs-id="@(trimitere.id_trimitere)" data-toggle="tooltip" data-placement="bottom" title="Afisare XML Trimitere"><i class="fa-solid fa-eye"></i></a>
+                                  var idul = trimitere.id_trimitere; 
+                            }
+                                                              
+                        </td>
+                     </tr>
+                     }                   
+                  </tbody>
+               </table>
+            </div>
+         </div>
+      </fieldset>
+      <br/>
       <fieldset>
          <div class="row">
             <legend class="col-11">Alergii:</legend>
@@ -256,6 +300,27 @@
             </div>
          </div>
       </div>
+       <div class="modal fade " id="deleteModalTrimitere" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+            <div class="modal-content">
+               <div class="modal-header">
+                  <h5 class="modal-title">Ștergere trimitere</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+               <div class="modal-body">
+                  @using (Html.BeginForm("StergereTrimitere", "Pacient", new{id=""}, FormMethod.Post, true, new{id = "formStergere_trimitere"}))
+                  {
+                  <p>Sunteți sigur că doriți să ștergeți această trimitere?</p>
+                  <div class="modal-footer">
+                     <input class="form-control" type="text" hidden name="id_uriTrimitere" id="id_uriTrimitere"/>
+                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Nu</button>
+                     <button class="btn btn-primary" type="submit" id="buttonDaPacient">Da</button>
+                  </div>
+                  }
+               </div>
+            </div>
+         </div>
+      </div>
       <div class="modal fade " id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
          <div class="modal-dialog">
             <div class="modal-content">
@@ -289,6 +354,28 @@
                   {
                   <div id="adaugare-medic">
                      <partial name="_AdaugareAlergie" />
+                  </div>
+                  <div class="modal-footer">
+                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
+                     <button class="btn btn-primary" type="submit">Adaugă</button>
+                  </div>
+                  }
+               </div>
+            </div>
+         </div>
+      </div>
+       <div class="modal fade " id="AdaugaTrimitereModal" tabindex="-1" aria-labelledby="AdaugaTrimitereModal" aria-hidden="true">
+         <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+               <div class="modal-header">
+                  <h5 class="modal-title text-center" id="exampleModalLabel">Creare trimitere</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+               <div class="modal-body">
+                  @using (Html.BeginForm("AdaugareTrimitere", "Pacient", new{id_pacient=@ViewBag.pacient.id_pacient}, FormMethod.Post, true, new{id = "formAdaugareTrimitere"}))
+                  {
+                  <div id="adaugare-medic">
+                     <partial name="_AdaugareTrimitere" />
                   </div>
                   <div class="modal-footer">
                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
@@ -365,6 +452,25 @@
                         <label  class="col-form-label">Data consultație:</label>
                         <input class="form-control" disabled type="date" id="input-data-consultatie1" name="data_consultatie"/>
                      </div>
+                  </div>
+                  <div class="modal-footer">
+                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+
+       <div class="modal fade " id="afisareModalTrimitere" tabindex="-1" aria-labelledby="afisareModalTrimitere" aria-hidden="true">
+         <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+               <div class="modal-header">
+                  <h5 class="modal-title text-center" id="exampleModalLabel">Afisare XML trimitere</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+               <div class="modal-body">
+                  <div id="adaugare-medic">
+                    <p id="fisier_xml"></p>
                   </div>
                   <div class="modal-footer">
                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
@@ -598,10 +704,44 @@
         document.getElementById("id_uriAlergie").value = id;
     }
 
+    function sendIdTrimitere(id) {
+        document.getElementById("formStergere_trimitere").setAttribute("id_trimitere", id);
+        document.getElementById("formStergere_trimitere").setAttribute("action", "StergereTrimitere/" + id);
+        document.getElementById("id_uriTrimitere").value = id;
+    }
+
     function sendId(id) {
         document.getElementById("formArhivare_consultatie").setAttribute("id_consultatie", id);
         document.getElementById("formArhivare_consultatie").setAttribute("action", "ArhiveazaConsultatie/" +  id);
         document.getElementById("id_uri").value = id;
+
+    }
+    const loadXML = function(xmlFile) {
+    var xmlDom = null;
+    if (window.ActiveXObject) {
+        xmlDom = new ActiveXObject("Microsoft.XMLDOM");
+        xmlDom.async = "false";
+        xmlDom.load(xmlFile);
+    } else if (
+        document.implementation &&
+        document.implementation.createDocument
+    ) {
+        var xmlhttp = new window.XMLHttpRequest();
+        xmlhttp.open("GET", xmlFile, false);
+        xmlhttp.send(null);
+        xmlDom = xmlhttp.responseXML;
+    } else {
+        xmlDom = null;
+    }
+    return xmlDom; //  The returned object is a doucument object
+};
+
+    function sendIdTrimitereAfisare(id){
+
+        let url = "txt/"+id+".xml"; //  File object
+        let xml = loadXML(url);
+        let text = new XMLSerializer().serializeToString(xml);
+        document.getElementById("fisier_xml").innerText = text;
 
     }
 
