--- a/Teleasis-website/Views/Pacient/_AdaugareConsultatie.cshtml
+++ b/Teleasis-website/Views/Pacient/_AdaugareConsultatie.cshtml
@@ -24,13 +24,9 @@
    <span id="eroare-input-tratament" class="text-danger"></span>
 </div>
 <div class="mb-3">
-   <label class="col-form-label">Schema de medicatie:</label>
+   <label class="col-form-label">Observații:</label>
    <textarea type="text" class="form-control" id="input-schema" name="schema_consultatie" onfocusout='validareText(event)'></textarea>
    <span id="eroare-input-schema" class="text-danger"></span>
-</div>
-<div class="mb-3">
-   <label  class="col-form-label">Trimiteri:</label>
-   <textarea type="text" class="form-control" id="input-trimitere" name="trimitere_consultatie"></textarea>
 </div>
 <div class="mb-3">
    <label  class="col-form-label">Rețete:</label>
